<resources>
    <string name="app_name">Pet Lovers</string>
    <string name="app_title_login">Login</string>
    <string name="edtUsername">Username</string>
    <string name="edtPassword">Password</string>
    <string name="btnLogin">Confirm</string>
    <string name="txtSignUp"><u>Create an new Account</u></string>
    <string name="txtBuyer1">Buyer:</string>
    <string name="errorLoginComplete">Login Successfully</string>
    <string name="errorLoginFailed">Login Failed because Username or Password does not exists</string>
    <string name="errorLoginBanned">Your Account have been Banned by Supervisors please wait at least 5 day to login again</string>
    <string name="errorChat">You cannot chat with yourself</string>
    <string name="title_activity_staff">Staff</string>
    <string name="title_pet_addition">Pet Addition</string>
    <string name="title_pet_list">Pet In Stocks</string>
    <string name="title_user_list">Users List</string>
    <string name="title_order_list">Orders List</string>
    <string name="edtAnimalName">Pet Name</string>
    <string name="txtAnimalGender">Gender:</string>
    <string name="titleRemovePet">Remove Pet</string>
    <string name="titleCheckPet">Accept Pet join Market</string>
    <string name="txtMale">Male</string>
    <string name="txtFemale">Female</string>
    <string name="edtAnimalPrice">Pet Price(VND)</string>
    <string name="edtAnimalAmount">Pet Amount</string>
    <string name="edtAnimalWeight">Pet Weight(Kg)</string>
    <string name="edtAnimalCategory">Pet Category</string>
    <string name="txtFullName">Fullname:</string>
    <string name="txtPassword">Password:</string>
    <string name="txtPhone">Phone:</string>
    <string name="txtBannedTime">Banned Time:</string>
    <string name="txtTradeTime">Trade Time:</string>
    <string name="txtMoney">Money:</string>
    <string name="txtTimes">times</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="errorNumberFormat">Pet Price, Amount and Weight must be a Number</string>
    <string name="errorNumberFormat1">Pet Weight must be a Number</string>
    <string name="errorNumberFormat2">Pet Price must be a Number</string>
    <string name="errorAnimalNameRestrict">Pet Name must have more than 5 characters</string>
    <string name="errorPrice">Pet Price must cost more than 10.000 VND</string>
    <string name="errorAmount">Pet Amount must be bigger than 0</string>
    <string name="errorWeight">Pet Weight must be bigger than 0</string>
    <string name="completeAnimalAdded">Insert Pet Completed</string>
    <string name="failedAnimalAdded">Insert Pet Failed</string>
    <string name="errorUserSellPetComplete">You can check your bill in Order Screen</string>
    <string name="errorUserSellPetFailed">You cannot sell your pet. Please your internet connection then try it again</string>
    <string name="title_activity_user">Home</string>
    <string name="titleUserMain">Main Screen</string>
    <string name="titleUserNewFeed">New Feeds</string>
    <string name="titleUserProfile">My Profile</string>
    <string name="titleUserSellPet">Confirm your information</string>
    <string name="messageUserSellPet">Are you really want to sell</string>
    <string name="messageUserSellPet1">with</string>
    <string name="messageUserSellPet2">You will lost your pet in your profile</string>
    <string name="txtProfileSurplus">Surplus Money:</string>
    <string name="vpPetBuy">My Pets Order</string>
    <string name="vpPetSell">Pets I have Sold</string>
    <string name="titleMCMarket">Click here to see and buy pet</string>
    <string name="titleMCOrder">Click here to see all of your order</string>
    <string name="titleMCSell">Click here to sell your pet</string>
    <string name="titleMCLocation">Click here to see Pet Lovers Store Location</string>
    <string name="titleMCSocial">Click here share your pet information or find someone</string>
    <string name="txtUserPetMarket">Pet Market</string>
    <string name="txtUserPetOrder">My Order</string>
    <string name="txtUserPetLocation">Store Location</string>
    <string name="txtUserPetTrade">Trade My Pet</string>
    <string name="txtUserPetCommunity">Pet Lovers Social</string>
    <string name="txtUserMarketPetName">Pet Name:</string>
    <string name="txtUserMarketPetGender">Pet Gender:</string>
    <string name="txtUserMarketPrice">Cost per 1 pet:</string>
    <string name="txtUserMarketPetAmount">Amount:</string>
    <string name="titleDialogUserMarket">Pet Information</string>
    <string name="dialogPrice">VND</string>
    <string name="dialogAmount">left</string>
    <string name="btnUserMarketFind">Find</string>
    <string name="edtUserMarketFind">Do you want to find some pet?</string>
    <string name="errorUserMarketFind">Cannot find your pet</string>
    <string name="txtUserMarketPetSeller">Seller:</string>
    <string name="dialogBuy">Select amount you want to buy:</string>
    <string name="alertDialogUserMarket">Order information</string>
    <string name="errorNotEnoughMoney">You dont have enough money to buy. Please purchase more money then try it again</string>
    <string name="dialogMarketWarning">Do you really want to buy this pet?. You can write down your comment bellow this warning or not</string>
    <string name="edtUserMarketComment">Write your comment...</string>
    <string name="edtUserMarketComplete">Complete your order</string>
    <string name="errorUserMarketBuyOwnPet">You cannot buy your own pet</string>
    <string name="titleUserMarketBuyNewFeed">I just bought a new</string>
    <string name="commentUserMarketBuyNewFeed">You can chat with me if you want to know about price, amount, health or anything about my new pet</string>
    <string name="UserMarketBuyComplete">is your pet now</string>
    <string name="txtAnimalName">Name: </string>
    <string name="menuCamera">Take a picture</string>
    <string name="menuFolder">Use picture from folder</string>
    <string name="menuTitle">Select your picture input type</string>
    <string name="dialogTotalCost">Total cost you have to pay:</string>
    <string name="edtUserFullName">Full name</string>
    <string name="edtUserUsername">Username</string>
    <string name="edtUserPassword">Password</string>
    <string name="edtUserPhone">Phone number</string>
    <string name="errorSignUpFullname">Full Name characters length Min is 5 and Max is 30</string>
    <string name="errorSignUpUsername">Username characters length Min is 5 and Max is 30</string>
    <string name="errorSignUpPassword">Password characters length Min is 5 and Max is 30</string>
    <string name="errorSignUpPhone">Phone Number must have 10 characters</string>
    <string name="errorSignUpAddress">Address characters length Min is 5 and Max is 40</string>
    <string name="errorSignUpComplete">Sign up Successfully, for now you can login with this Account</string>
    <string name="errorSignUpFailed1">Sign up Failed please check your internet connection again</string>
    <string name="errorSignUpFailed">Cannot Sign Up because this Username have been used before</string>
    <string name="cbUserMarketComment">Comment about this pet or something?</string>
    <string name="txtUserOrderBuyID">Order ID:</string>
    <string name="txtUserOrderBuyIDPet">Pet ID:</string>
    <string name="txtUserOrderBuyAmount">Amount:</string>
    <string name="txtUserOrderBuyMoney">Total Cost:</string>
    <string name="updateComplete">Update information completed</string>
    <string name="updateFailed">Update information failed. Please recheck your internet connection</string>
    <string name="animals">pet</string>
    <string name="txtUserMarketPetPrice">Price:</string>
    <string name="txtMarketBuyNow">Buy Now</string>
    <string name="txtUserUpdateInformation">Update your information</string>
    <string name="txtUserUpdateFullname">Update your Fullname</string>
    <string name="txtUserUpdateAddress">Update your Address</string>
    <string name="txtUserUpdatePhoneNumber">Update your Phone number</string>
    <string name="txtUserUpdatePassword">Update your Password</string>
    <string name="errorEmpty">Information characters length max is 40 and min is 5</string>
    <string name="txtUserPurchaseMoney">Purchase more money</string>
    <string name="txtUserAddPet">Your Pet</string>
    <string name="txtOrderAccept">is Accepted?</string>
    <string name="txtUserMarketPetStatus">Status:</string>
    <string name="txtAvailable">Available</string>
    <string name="txtSoldOut">Sold Out</string>
    <string name="txtUserMarketSoldOut">This pet is out of stock. You can buy it next time</string>
    <string name="all">All</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="turtle">Turtle</string>
    <string name="fish">Fish</string>
    <string name="mouse">Mouse</string>
    <string name="bird">Bird</string>
    <string name="another">Difference</string>
    <string name="txtAnimalWeight">Weight:</string>
    <string name="txtAnimalCategory">Category:</string>
    <string name="titleUserBan">Ban Member</string>
    <string name="titleUserUnBan">Release Member</string>
    <string name="warningBanMember">Are you really want to ban member</string>
    <string name="warningBanMember1">this Member will not login (his/her) account anymore</string>
    <string name="warningUnBanMember">Are you really want to release member</string>
    <string name="warningUnBanMember1">this Member can join this account again</string>
    <string name="txtUserSellValuation">Typing Pet price</string>
    <string name="titleUserSellValuation">Pet Valuation</string>
    <string name="txtAddress">Address:</string>
    <string name="txtUpdateInformation">Typing your information</string>
    <string name="txtUserAddress">Address</string>
    <string name="valuePurchase">Choose value you want to purchase</string>
    <string name="txtMarketContact">Contact</string>
    <string name="txtUserUpdatePetName">Update your Pet name</string>
    <string name="txtUserUpdatePetGender">Update your Pet gender</string>
    <string name="txtUserUpdatePetWeight">Update your Pet weight</string>
    <string name="removePet">Are you really want to remove</string>
    <string name="checkPet1">get into Market? Every member can buy this pet anytime</string>
    <string name="checkPet">Are you really want to allow</string>
    <string name="imgProfileFailed">Update profile avatar failed. Please check your internet connection then try update again</string>
    <string name="petRemoveFailed">Remove pet failed. Please check your internet connection then try it again</string>
    <string name="checkInternet">Error! An error occurred. Please try again later</string>
    <string name="txtWriteTitle">Write your title...</string>
    <string name="txtWriteDescription">Write your desciption...</string>
    <string name="errorShareTitle">Title characters length Min is 0 and Max is 40</string>
    <string name="errorShareDescribe">Desciption characters length Min is 0 and Max is 250</string>
    <string name="errorShareComplete">Share completed</string>
    <string name="errorShareFailed">Share Failed. Please check your internet connection then try it again</string>
    <string name="typeMessage">Type your message...</string>
    <string name="titleUserRecentChat">Recent Chat</string>
    <string name="title_question">Member Feed Back</string>
    <string name="title_log_out">Log Out</string>
    <string name="warningSellPet">Please add pet first then you can sell it</string>
    <string name="warningSellPet1">Select a pet you wanna sell</string>
</resources>