<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/navigationPetAddtion"
                android:icon="@drawable/img_store"
                android:title="@string/title_pet_addition"/>

        <item
                android:id="@+id/navigationPetList"
                android:icon="@drawable/img_animal"
                android:title="@string/title_pet_list"/>

        <item
                android:id="@+id/navigationUserList"
                android:icon="@drawable/img_user"
                android:title="@string/title_user_list"/>
        <item
                android:id="@+id/navigationOrderList"
                android:icon="@drawable/img_order"
                android:title="@string/title_order_list"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Send"/>
        </menu>
    </item>

</menu>
