<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="@dimen/layout_padding_size">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            android:layout_margin="10dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp">
            <ImageView
                    android:layout_width="220dp"
                    android:layout_height="90dp"
                    android:src="@drawable/img_animal"
                    android:id="@+id/imgUserOrderSellImage"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.5"
                        android:text="@string/txtUserOrderBuyIDPet"
                        android:textSize="@dimen/userorderbuy_txt_size"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6.5"
                        android:text="order1141343424"
                        android:id="@+id/txtUserOrderSellPetID"
                        android:gravity="center"
                        android:textSize="@dimen/userorderbuy_txt_size"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.5"
                        android:text="@string/txtUserMarketPetName"
                        android:textSize="@dimen/userorderbuy_txt_size"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6.5"
                        android:text="order1141343424"
                        android:gravity="center"
                        android:id="@+id/txtUserOrderSellName"
                        android:textSize="@dimen/userorderbuy_txt_size"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.5"
                        android:text="@string/txtAnimalGender"
                        android:textSize="@dimen/userorderbuy_txt_size"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6.5"
                        android:text="order1141343424"
                        android:gravity="center"
                        android:id="@+id/txtUserOrderSellGender"
                        android:textSize="@dimen/userorderbuy_txt_size"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:text="@string/txtUserMarketPetPrice"
                    android:textSize="@dimen/userorderbuy_txt_size"
                    android:textStyle="bold"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.5"
                    android:text="order1141343424"
                    android:gravity="center"
                    android:id="@+id/txtUserOrderSellPrice"
                    android:textSize="@dimen/userorderbuy_txt_size"/>
        </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.5"
                        android:text="@string/txtUserMarketPetStatus"
                        android:textSize="@dimen/userorderbuy_txt_size"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6.5"
                        android:text="@string/txtAvailable"
                        android:gravity="center"
                        android:textColor="@color/colorStartBtn"
                        android:id="@+id/txtUserOrderSellStatus"
                        android:textSize="@dimen/userorderbuy_txt_size"/>
            </LinearLayout>

            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_cv_size"
                    android:layout_gravity="left"
                    android:text="@string/txtOrderAccept"
                    android:textSize="@dimen/edt_txt_size"
                    android:enabled="false"
                    android:id="@+id/cbUserOrderSell"/>


        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>