<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".user.usersell.UserSellActivity"
        android:background="@color/colorBackground"
        android:padding="@dimen/layout_padding_size">

    <ImageView
            android:src="@drawable/img_addition"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:id="@+id/imgUserSellAddition"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imgUserSellAddition"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            android:id="@+id/tilUserSellName">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/edtAnimalName"
                android:id="@+id/edtUserSellName"
                android:textSize="@dimen/edt_txt_size"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
            android:text="@string/txtAnimalGender"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="14dp"
            app:layout_constraintTop_toBottomOf="@+id/tilUserSellName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"/>

    <RadioGroup
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:checkedButton="@id/rdMale"
            android:orientation="horizontal"
            android:background="@drawable/ic_bg_pink"
            android:weightSum="10"
            app:layout_constraintTop_toBottomOf="@+id/tilUserSellName"
            android:id="@+id/radioGroup2"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginTop="8dp">

        <RadioButton
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_bg_toggle"
                android:layout_weight="5"
                android:id="@+id/rdMale"
                android:text="@string/txtMale"
                android:gravity="center"
                android:textColor="@color/colorBackground"
                android:button="@null"
                />

        <RadioButton
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_bg_toggle"
                android:layout_weight="5"
                android:id="@+id/rdFemale"
                android:text="@string/txtFemale"
                android:gravity="center"
                android:textColor="@color/colorBackground"
                android:button="@null"
                />
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            app:counterMaxLength="10"
            app:counterEnabled="true"
            android:layout_marginStart="8dp"
            android:id="@+id/tilUserSellPrice">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/edt_txt_size"
                android:inputType="number"
                android:id="@+id/edtUserSellPrice"
                android:hint="@string/edtAnimalPrice"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tilUserSellPrice"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="3"
            android:id="@+id/tilUserSellAmount">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/edtAnimalAmount"
                android:id="@+id/edtUserSellAmount"
                android:textSize="@dimen/edt_txt_size"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:text="@string/btnLogin"
            android:layout_width="@dimen/btn_size"
            android:layout_height="wrap_content"
            android:id="@+id/btnUserSellConfirm"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_btn_confirm"
            android:textColor="@color/colorBackground"
            android:textSize="@dimen/btn_txt_size"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tilUserSellAmount"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>

</android.support.constraint.ConstraintLayout>